--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "MaoZiming"
-  avatar           : "profile.png"
+  name             : "Ziming Mao"
+  avatar           : "images/profile.png"
   bio              : "Undergraduate Student at Yale College"
   location         : "New Haven, CT"
   employer         :
