--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ziming Mao"
+  name             : "Ziming Mao (毛子鸣)"
   avatar           : "ziming_profile.png"
   bio              : "Undergraduate Student at Yale"
   location         : "New Haven, CT"
