--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,9 @@
 main:
   - title: "Publications"
     url: /publications/
+
+  - title: "Hobbies"
+    url: /hobbies/
     
   # - title: "CV"
   #   url: /cv/
