--- a/_config.yml
+++ b/_config.yml
@@ -265,6 +265,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyllgram
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
