--- a/_config.yml
+++ b/_config.yml
@@ -264,6 +264,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jekyllgram
   - jekyll-redirect-from
   - jekyllgram
 # mimic GitHub Pages with --safe
@@ -272,6 +273,7 @@ whitelist:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jekyllgram
   - jemoji
 
 
