--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Hobbies"
-    url: /hobbies/
+  - title: "Astrophotography"
+    url: /astrophotography/
     
   # - title: "CV"
   #   url: /cv/
