--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "CV"
+    url: /cv/
+
   - title: "Astrophotography"
     url: /astrophotography/
-    
-  # - title: "CV"
-  #   url: /cv/
+  
