--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ziming Mao"
+title                    : "Research"
 title_separator          : "-"
 name                     : &name "Ziming Mao"
 description              : &description "Undergraduate Student at Yale college, LILY Lab, Computer Systems Lab (Yale), TheSys Lab (CMU)"
