--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ziming Mao (毛子鸣)"
+  name             : "Ziming Mao"
   avatar           : "ziming_profile.png"
-  bio              : "Yale college'23"
+  bio              : "毛子鸣"
   location         : "New Haven, CT"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
