--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ziming Mao"
-  avatar           : "ziming_profile.png"
+  avatar           : "ziming_profile_2.jpeg"
   bio              : "Yale college"
   location         : "New Haven, CT"
   employer         :
