--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ziming Mao"
   avatar           : "ziming_profile.png"
-  bio              : "Yale college"
+  bio              : "Yale University"
   location         : "New Haven, CT"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
