--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Stargazing"
-    url: /stargazing/
+  - title: "Astrophotography"
+    url: /astrophotography/
   
   # - title: "CV"
   #   url: /cv/
