--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Ziming Mao"
   avatar           : "ziming_profile.png"
-  bio              : "Yale University"
-  location         : "New Haven, CT"
+  bio              : "UC Berkeley"
+  location         : "Berkeley, CA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=ycaUmLkAAAAJ&hl=en"
-  email            : ziming.mao@yale.edu
+  email            : ziming.mao@berkeley.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
