--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ziming Mao"
-  avatar           : "ziming_profile.png"
+  avatar           : "ziming_profile_2.png"
   bio              : "UC Berkeley"
   location         : "Berkeley, CA"
   employer         :
