--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ziming Mao"
   avatar           : "ziming_profile_2.png"
-  bio              : "CS Ph.D. student @ UC Berkeley, Part-time @ Databricks"
+  bio              : "CS Ph.D. student @ UC Berkeley"
   location         : "Berkeley, CA"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
